# compliance_manager

./: .gitignore  MANIFEST.in  README.md  license.txt  pyproject.toml  requirements.txt
compliance_manager/: api.py  hooks.py  install.py  modules.txt
compliance_manager/compliance_manager/doctype/compliance_category/: compliance_category.json  compliance_category.py
compliance_manager/compliance_manager/doctype/compliance_record/: compliance_record.json  compliance_record.py
compliance_manager/compliance_manager/doctype/compliance_reminder_log/: compliance_reminder_log.json  compliance_reminder_log.py
compliance_manager/public/frontend/: index.html
compliance_manager/public/js/: compliance_record.js  insurance_policy.js  licence.js  trademark.js
compliance_manager/services/: reminders.py
compliance_manager/tests/: __init__.py  test_compliance_record.py  test_reminders.py
compliance_manager/utils/: reminders_config.py  tracker.py
compliance_manager/www/: compliance.html  compliance.py
frontend/: .gitignore  index.html  jsconfig.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  index.css  main.js  router.js
frontend/src/components/: AppSidebar.vue  Button.vue  ConfirmDialog.vue  EmptyState.vue  FormField.vue  Icon.vue  LinkField.vue  Modal.vue  PageHeader.vue  Spinner.vue  StatCard.vue  StatusBadge.vue  TrackerFormDialog.vue  TrackerTable.vue
frontend/src/data/: session.js  trackers.js
frontend/src/pages/: Dashboard.vue  NotFound.vue  Settings.vue  TrackerPage.vue
frontend/src/utils/: format.js
(+57 files in other folders)
